--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Restuarants</a>
+                <a class="nav-link " href="#"  >Restuarants</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Events</a>
+                <a class="nav-link" href="events.html"  >Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+                <a class="nav-link " href="#"  >Contact Us</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -47,19 +47,19 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1400x400/?nature,water" class="d-block w-100" alt="...">
+            <img src="/images/hero/1.jfif" width="1400" height="400" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1400x400/?nature,forest" class="d-block w-100" alt="...">
+            <img src="/images/hero/2.jfif" width="1400" height="400" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1400x400/?nature,culture" class="d-block w-100" alt="...">
+            <img src="/images/hero/3.jfif" width="1400" height="400" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1400x400/?nature,event" class="d-block w-100" alt="...">
+            <img src="/images/hero/hero2.png" width="1400" height="400" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://source.unsplash.com/1400x400/?nature,mountains" class="d-block w-100" alt="...">
+            <img src="/images/hero/hero1.png" width="1400" height="400" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -75,13 +75,15 @@
       <!-- Section 2 -->
       <div class="card text-center">
         <div class="card-header">
-          Featured
+         About Dehradun 
         </div>
         <div class="card-body">
           <h5 class="card-title">Special title treatment</h5>
 
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">
+            
+            The capital of Uttarakhand, Dehradun is a gateway to some of the most popular hill stations in the country like Nainital and Mussoorie. Nestled in the Doon Valley, it is primarily known for the number of elite boarding schools it has like the Doon School and the Indian Military Academy. In fact, Dehradun is also called the ‘school capital of India’ for the number of schools it is home to.</p>
+          <a href="#" class="btn btn-primary">Explore more</a>
         </div>
         <div class="card-footer text-muted">
           2 days ago
