--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link " href="#"  >Restuarants</a>
+                <a class="nav-link " href="food.html"  >Restuarants</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="events.html"  >Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#"  >Contact Us</a>
+                <a class="nav-link " href="contact.html"  >Contact Us</a>
               </li>
             </ul>
             <form class="d-flex">
