--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/mohit2314.github.io/dehradun_blogs/treks.html">Treks</a>
+                <a class="nav-link" href="treks.html">Treks</a>
               </li>
               
               <li class="nav-item">
