--- a/treks.html
+++ b/treks.html
@@ -27,13 +27,13 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link disabled" href="food.html" tabindex="-1" aria-disabled="true">Restuarants</a>
+                <a class="nav-link disabled" href="food.html" >Restuarants</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="events.html" tabindex="-1" aria-disabled="true">Events</a>
+                <a class="nav-link disabled" href="events.html" >Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
+                <a class="nav-link disabled" href="contact.html" >Contact Us</a>
               </li>
             </ul>
             <form class="d-flex">
