--- a/events.html
+++ b/events.html
@@ -20,20 +20,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link "  href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="treks.html">Treks</a>
               </li>
               
               <li class="nav-item">
-                <a class="nav-link disabled" href="food.html" >Restuarants</a>
+                <a class="nav-link " href="food.html" >Restuarants</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="events.html" >Events</a>
+                <a class="nav-link active" aria-current="page" href="events.html" >Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="contact.html" >Contact Us</a>
+                <a class="nav-link " href="contact.html" >Contact Us</a>
               </li>
             </ul>
             <form class="d-flex">
