--- a/treks.html
+++ b/treks.html
@@ -23,7 +23,7 @@
                 <a class="nav-link "  href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="treks.html">Treks</a>
+                <a class="nav-link active" aria-current="page" href="#">Treks</a>
               </li>
               
               <li class="nav-item">
@@ -54,7 +54,7 @@
         </div>
         <div class="col-md-5">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-  <img class="img-fluid" src="/images/places/places1.png" alt="" width="500" height="500">
+  <img class="img-fluid" src="/mohit2314.github.io/dehradun_blogs/images/places/places1.png" alt="" width="500" height="500">
         </div>
       </div>
       <!-- **** -->
