--- a/treks.html
+++ b/treks.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-md-5">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-  <img class="img-fluid" src="/mohit2314.github.io/dehradun_blogs/images/places/places1.png" alt="" width="500" height="500">
+  <img class="img-fluid" src="/places1.png" alt="" width="500" height="500">
         </div>
       </div>
       <!-- **** -->
