--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="/places1.png" class="card-img-right" alt="...">
+      <img src="/dehradun_blogs/places1.png" class="card-img-right" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a short card.</p>
