scrolling to explore more on click

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p class="card-text">
             
             The capital of Uttarakhand, Dehradun is a gateway to some of the most popular hill stations in the country like Nainital and Mussoorie. Nestled in the Doon Valley, it is primarily known for the number of elite boarding schools it has like the Doon School and the Indian Military Academy. In fact, Dehradun is also called the ‘school capital of India’ for the number of schools it is home to.</p>
-          <a href="#" class="btn btn-primary">Explore more</a>
+          <a href="#explore" class="btn btn-primary">Explore more</a>
         </div>
         <div class="card-footer text-muted">
           2 days ago
@@ -91,7 +91,7 @@
       </div>
       <!--  -->
 <!-- Card Row starts -->
-      <div class="row mb-2">
+      <div class="row mb-2" id="explore">
         <div class="col-md-6">
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
