--- a/treks.html
+++ b/treks.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-          <img class="img-fluid" src="/dehradun_blogs/images/places/place2.png" alt="" width="500" height="500">
+          <img class="img-fluid" src="/images/places/place2.png" alt="" width="500" height="500">
   
         </div>
       </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-5 order-md-2">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-          <img class="img-fluid" src="/dehradun_blogs/images/places/place3.png" alt="" width="500" height="500">
+          <img class="img-fluid" src="/images/places/place3.png" alt="" width="500" height="500">
   
         </div>
       </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-          <img class="img-fluid" src="/dehradun_blogs/images/places/place4.png" alt="" width="500" height="500">
+          <img class="img-fluid" src="/images/places/place4.png" alt="" width="500" height="500">
   
         </div>
       </div>
@@ -105,7 +105,7 @@
         </div>
         <div class="col-md-5 order-md-2">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-          <img class="img-fluid" src="/dehradun_blogs/images/places/place5.png" alt="" width="500" height="500">
+          <img class="img-fluid" src="/images/places/place5.png" alt="" width="500" height="500">
   
         </div>
       </div>
